# lean-ctx

./: .github-ignore  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CONTRACTS.md  LEANCTX_FEATURE_CATALOG.md  README.md  VISION.md  discord-faq.md  llms.txt
clients/rust/lean-ctx-client/: .gitignore  Cargo.toml  README.md
clients/rust/lean-ctx-client/contracts/: ocla-wire-v1.schema.json
clients/rust/lean-ctx-client/scripts/: verify-packaged-source.sh
clients/rust/lean-ctx-client/src/: client.rs  conformance.rs  lib.rs  ocla.rs
clients/rust/lean-ctx-client/tests/: conformance_live.rs  dependency_boundary.rs  external_consumer.rs  ocla_cli.rs  ocla_wire.rs
py-sdk/: pyproject.toml
py-sdk/leanctx/: __init__.py  client.py  types.py
py-sdk/tests/: test_client.py
rust/: .gitignore  Cargo.toml  LEAN-CTX.md  LOCK_ORDERING.md  README.md
rust/benches/: efficiency.rs
rust/data/: addon_registry.json
rust/eval/testbench/: recording.json
rust/src/: cloud_client.rs  cloud_sync.rs  daemon_client.rs  hook_handlers.rs  instructions.rs  proxy_autostart.rs  proxy_setup.rs  setup.rs  shell_hook.rs  terminal_ui.rs  token_report.rs
rust/src/cli/: addon_cmd.rs  cheatsheet_cmd.rs  config_cmd.rs  health_cmd.rs  index_cmd.rs  init_cmd.rs  knowledge_cmd.rs  learn_cmd.rs  mod.rs  ocla_cmd.rs  prompt.rs  read_cmd.rs  security_cmd.rs  session_cmd.rs  shell_init.rs  snapshot_cmd.rs  wrapped_publish.rs
rust/src/cli/completions/: engine.rs
rust/src/cli/dispatch/: help.rs  lifecycle.rs  mod.rs  network.rs  server.rs  suggest.rs
rust/src/cloud_server/: billing_edge.rs  buddy.rs  cep.rs  commands.rs  db.rs  devices.rs  feedback.rs  gain.rs  gotchas.rs  index_sync.rs  knowledge.rs  mod.rs  stats.rs
rust/src/cloud_server/wrapped/: mod.rs  tests.rs
rust/src/core/: adaptive_thresholds.rs  agents.rs  anchor.rs  archive_fts.rs  auto_findings.rs  auto_mode_resolver.rs  bandit.rs  cache.rs  cache_telemetry.rs  capabilities.rs  cognition_loop.rs  cognition_scheduler.rs  compressor.rs  consolidation.rs  context_ledger.rs  context_overhead.rs  contracts.rs  conversation.rs  conversation_scorer.rs  cooccurrence.rs  data_dir.rs  edit_quality.rs  embedding_index.rs  events.rs  evidence_classification.rs  extension_registry.rs  feedback.rs  graph_provider.rs  heatmap.rs  html_crush.rs  index_admission.rs  index_orchestrator.rs  index_progress.rs  ingestion.rs  instruction_compiler.rs  introspect.rs  io_boundary.rs  journal.rs  json_crush.rs  markdown_compact.rs  (+31 more)
rust/src/core/a2a/: compress.rs  cost_attribution.rs
rust/src/core/addons/: artifact_install.rs  bootstrap.rs  grammar_install.rs  install.rs  integrity.rs  manifest.rs  mod.rs  pack_env.rs  policy.rs  registry.rs  revocation.rs  store.rs  trust.rs
rust/src/core/benchmark_compare/: report.rs
rust/src/dashboard/: mod.rs
rust/src/doctor/: checks.rs  common.rs  fix.rs  integrations.rs  mod.rs  workspace_scope.rs
rust/src/gateway_server/: admin_api.rs  admin_status.rs  init.rs  report.rs  serve.rs  store.rs
rust/src/hook_handlers/: edit_health.rs  mod.rs  observe.rs  payload.rs  read_dedup.rs  tests.rs
rust/src/hooks/: mod.rs
rust/src/http_server/: mod.rs  savings_summary.rs
rust/src/ipc/: process.rs
rust/src/lsp/: config.rs  mod.rs  router.rs
rust/src/proxy/: anthropic.rs  auth_tests.rs  bedrock.rs  ccr.rs  chatgpt.rs  chatgpt_ws.rs  compress.rs  conversation.rs  cost.rs  effort_routing.rs  forward.rs  forward_trace_id.rs  google.rs  image_compression.rs  introspect.rs  mod.rs  model_router.rs  ocla_cache_bridge.rs  openai.rs  openai_responses.rs  openai_responses_ws.rs  providers.rs  response_optimizer.rs  response_shaper.rs  routing.rs  shaping_hook.rs  sse_keepalive.rs  stats_tests.rs  sticky_tools.rs  tool_output.rs  upstream_tests.rs  usage.rs  usage_accounting.rs  usage_meter.rs
rust/src/proxy_setup/: commandcode.rs  grok.rs  mod.rs  shell.rs  tests.rs  util.rs
rust/src/rules_inject/: content.rs  detect.rs  mod.rs  skills.rs  targets.rs  tests.rs  write.rs
rust/src/server/: background_shell.rs  bypass_hint.rs  call_tool.rs  compaction_sync.rs  context_gate.rs  dynamic_tools.rs  execute.rs  mod.rs  multi_path.rs  permission_inheritance.rs  post_dispatch.rs  registry.rs  server_handler.rs  tool_visibility.rs
rust/src/setup/: mcp.rs  mod.rs
rust/src/shell/: agent_wrapper.rs  exec.rs  redact.rs  reentry.rs  tee_policy.rs
rust/src/templates/: SKILL.md  lean-ctx-hybrid.mdc  lean-ctx.mdc
rust/src/tool_defs/: granular.rs  mod.rs
rust/src/tools/: autonomy.rs  ctx_agent.rs  ctx_callgraph.rs  ctx_compose.rs  ctx_discover.rs  ctx_edit.rs  ctx_expand.rs  ctx_gain.rs  ctx_glob.rs  ctx_impact.rs  ctx_metrics.rs  ctx_overview.rs  ctx_prefetch.rs  ctx_preload.rs  ctx_provider.rs  ctx_quality.rs  ctx_read.rs  ctx_refactor.rs  ctx_search.rs  ctx_share.rs  ctx_shell.rs  ctx_symbol.rs  ctx_tree.rs  edit_io.rs  mod.rs  server_lifecycle.rs  server_metrics.rs
rust/src/tui/: app.rs  event_reader.rs
rust/src/uninstall/: mod.rs
rust/tests/: archive_expand_tests.rs  autonomy_tests.rs  bazsi_reported_scenarios.rs  ciso_great_filter_e2e.rs  claude_config_dir.rs  cli_characterization.rs  codex_proxy_554.rs  compliance_frameworks.rs  compression_improvements.rs  ctx_compose_scenarios.rs  ctx_read_lmd_md_raw.rs  dropin_install_tests.rs  dual_process_rehydrate.rs  edit_reliability.rs  efficiency_ux_scenarios.rs  evidence_bundle_e2e.rs  gateway_postprocess_e2e.rs  hardening_ir_traits.rs  hn_hardening_scenarios.rs  index_scoping_scenarios.rs  intensive_benchmarks.rs  intent_protocol_side_effects.rs  issue_244_ledger_reset.rs  issue_249_index_observability.rs  issue_326_parallel_knowledge.rs  issue_885_anchored_after_patch.rs  live_smoke_client_instructions.rs  local_free_invariant.rs  locomo_smoke.rs  mcp_fast_initialize_669.rs  memory_benchmark_suite.rs  multi_read_cap_scenarios.rs  neuro_physics_scenarios.rs  ocla_integration_suite.rs  ocla_wire_contract_suite.rs  ocp_self_validation.rs  outcome_pricing_e2e.rs  output_contracts_knowledge.rs  p2_graph_embeddings_eval.rs  p4_adaptive_mode_policy_eval.rs  (+20 more)
(+401 files in other folders)
