[project]
name = "leanctx"
version = "0.1.0"
description = "Python SDK for lean-ctx OCLA wire API"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
