[package]
name = "lean-ctx-client"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
include = [
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/src/**",
  "/tests/**",
  "/contracts/**",
  "/scripts/**",
]
license = "Apache-2.0"
description = "Thin, stable HTTP client for the lean-ctx Context OS /v1 contract. Integrate over the process boundary without linking the engine."
repository = "https://github.com/yvgude/lean-ctx"
homepage = "https://leanctx.com"
readme = "README.md"
keywords = ["lean-ctx", "mcp", "llm", "context"]
categories = ["api-bindings", "web-programming::http-client"]

# Intentionally standalone: this crate is NOT part of the engine workspace
# (`../../../rust`). Embedders depend on a curated client surface, never on the
# engine internals. See `src/lib.rs` ("Non-goals") for the boundary contract.

[dependencies]
ureq = { version = "=2.9.7", features = ["json"] }
url = "=2.4.1"
zeroize = "=1.7.0"
serde = { version = "=1.0.193", features = ["derive"] }
serde_json = "=1.0.108"
thiserror = "=1.0.50"
blake3 = "=1.5.0"

[target.'cfg(unix)'.dependencies]
libc = "=0.2.186"

[dev-dependencies]
ahash = "=0.8.11"
jsonschema = { version = "=0.17.1", default-features = false, features = ["draft202012"] }
time = "=0.3.36"
uuid = "=1.6.1"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
all = "warn"
